--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ h1 {
 }
 h4 {
     margin:  1% 0 1% 0;
+    font-family: "Cabin", sans-serif;
+    font-weight: normal;
+    text-align: center;
+    font-size: 24px
 }
 
 p {
@@ -39,7 +43,7 @@ html{
   display: flex;
   align-items: center;
   justify-content: center;
-  height:50px;
+  height:25px;
 }
 
 #app{
@@ -138,13 +142,13 @@ th, td {
 }
 
 
-._14 {
+.foot {
     font-size: 1.4em;
     text-align: center;
     font-weight: 400;
 }
 .footer-social-icons {
-    width: 175px;
+    width: 200px;
     display:block;
     float: center;
     margin: 0 auto;
