--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@ h1 {
     font-size: 72px;
     text-align: center;
 }
+h2 {
+		text-transform: uppercase;
+	font-family: "Cabin", sans-serif;
+	text-align: center;
+	font-size: 300%;
+    letter-spacing: 10px;
+    font-weight: bold;
+    font-size: 48px;
+    text-align: center;
+}
 h4 {
     margin:  1% 0 1% 0;
     font-family: "Cabin", sans-serif;
